Refactor carousel styles for transparency and updated padding

--- a/news.html
+++ b/news.html
@@ -18,7 +18,7 @@
         <div class="carousel-track" id="carouselTrack">
           
           <!-- News Slide 1 -->
-          <div class="slide" style="background-image: url('https://timma-test.efa.gr/files/asset/026a182519304ad67b9fa2539acc3c06924719e0.png')">
+          <div class="slide no-image">
             <div class="news-content">
               <h3>TiMMA in the Cahiers de l’ANR</h3>
               <p class="news-date">May 2023</p>
@@ -38,7 +38,7 @@
           </div>
 
           <!-- Cretological Congress Slide -->
-          <div class="slide" style="background-image: url('https://timma-test.efa.gr/files/asset/93f503753fa1e2f8a67f09106539cd56bd9c1960.png')">
+          <div class="slide no-image">
             <div class="news-content">
               <h3>TiMMA at the Cretological congress in Ayios Nikolaos, 5-9 October 2022</h3>
               <p>Between 5 and 9 October, the 13th International Congress of Cretan Studies will be held at Agios Nikolaos, Crete. On this occasion Marilena Pateraki, Maia Pomadère, Bastien Rueff, Eleftheria Tsakanika and Sylvie Rougier-Blanc will present a paper entitled: “A rise in the use of timber in Neopalatial architecture? First results of the TiMMA project at Malia”.</p>
