--- a/database_user_manual.html
+++ b/database_user_manual.html
@@ -899,7 +899,7 @@
           // Décalage pour navbar sur grand écran
           setTimeout(function() {
             if (window.innerWidth > 800) {
-              const offset = 56; // hauteur de la navbar ou marge souhaitée
+              const offset = 120; // hauteur de la navbar ou marge souhaitée (plus grand)
               const rect = target.getBoundingClientRect();
               window.scrollBy({top: rect.top - offset, left: 0, behavior: 'instant'});
             }
